typescript/checker/tests/conformance/async/es5/asyncAliasReturnType_es5.ts.stderr
error: unimplemented
expand_export_info(PromiseAlias)
File: $DIR/tests/conformance/async/es5/asyncAliasReturnType_es5.ts
 --> $DIR/tests/conformance/async/es5/asyncAliasReturnType_es5.ts:6:1
  |
6 | / async function f(): PromiseAlias<void> {
7 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            127,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es5/asyncAliasReturnType_es5.ts:6:19
  |
6 | async function f(): PromiseAlias<void> {
  |                   ^^^^^^^^^^^^^^^^^^^^

